# androidx

./: .gitignore  .jbWebExistsMarker  Android x  Android.mk  CONTRIBUTING.md  CleanSpec.mk  MULTIPLATFORM.md  OWNERS  PREUPLOAD.cfg  README.md  TEXT_OWNERS  adding-support-library-as-included-build.md  apicheck.mk  apicheck_msg_current.txt  apicheck_msg_last.txt  build.gradle  cleanBuild.sh  cleanTempFiles.sh  code-review.md  do-not-merge.md  droiddoc.mk  gradle.properties  gradlew  gradlew.bat  include-composite-deps.gradle  include-support-library.gradle  index.md  libraryversions.toml  license-baseline.txt  local.properties  makeFlatfootRepo.sh  merge.todo  mergeAOSP.sh  pathmap.mk  settings.gradle  snapSubfolder.sh  studiow  tmp.dL7neG11C0
.github/: CODEOWNERS  OWNERS  PULL_REQUEST_TEMPLATE.md
activity/: OWNERS  README.md  build.gradle  settings.gradle
ads/: OWNERS
androidx-plugin/: README.md  build.gradle  gradlew  gradlew.bat  settings.gradle
animation/: build.gradle  lint-baseline.xml
annotations/: Android.mk  AndroidManifest.xml  OWNERS  README.md  build.gradle
api/: 22.0.0.txt  22.1.0.txt  22.2.0.txt  22.2.1.txt  23.0.0.txt  23.1.0.txt  23.1.1.txt  23.2.0.txt  23.2.1.txt  23.4.0.txt  24.0.0.txt  24.1.0.txt  24.2.0.txt  25.0.0.txt  25.1.0.txt  25.2.0.txt  25.3.0.ignore  25.3.0.txt  25.4.0-SNAPSHOT.ignore  25.4.0-SNAPSHOT.txt  25.4.0.ignore  25.4.0.txt  26.0.0-SNAPSHOT.txt  26.0.0-alpha1.txt  26.0.0-beta1.txt  26.0.0.txt  26.1.0-SNAPSHOT.txt  26.1.0.ignore  26.1.0.txt  27.0.0-SNAPSHOT.txt  28.0.0-SNAPSHOT.txt  current.txt  removed.txt
app-toolkit/: README.md  build.gradle  dependencies.gradle  gradle.properties  init.gradle  kotlin-checkstyle.xml  localize.sh  settings.gradle  settings_support_lib.gradle
appcompat/: .classpath  .gitignore  .project  Android.mk  Android.mk.disabled  AndroidManifest.xml  OWNERS  README.md  README.txt  THEMES  build.gradle  buildSrc  gradle.properties  lint-baseline.xml  proguard-rules.pro  settings.gradle
appintegration/: OWNERS
appsearch/: .gitignore  OWNERS  exportToFramework.py  export_to_framework.py
arch/: OWNERS
asynclayoutinflater/: OWNERS  build.gradle
autofill/: OWNERS  build.gradle
benchmark/: OWNERS  build.gradle  lockClocks.sh
binarycompatibilityvalidator/: OWNERS
biometric/: OWNERS  build.gradle  lint-baseline.xml  settings.gradle
bluetooth/: OWNERS
browser/: OWNERS  README.md  build.gradle  build.gradle.kts  lint-baseline.xml
buildSrc/: OWNERS  build.gradle  dependencies.gradle  kotlin-dsl-dependency.gradle  lint.xml  lint_samples.xml  ndk.gradle  out.gradle  repos.gradle  settings.gradle  shared-dependencies.gradle  shared.gradle
buildSrc-tests/: build.gradle  lint-baseline.xml
busytown/: OWNERS  androidx-multiplatform.sh  androidx-native-mac-host-tests.sh  androidx-native-mac.sh  androidx-studio-integration-host-tests.sh  androidx-studio-integration-lint.sh  androidx-studio-integration-tests.sh  androidx-studio-integration-vitals.sh  androidx-studio-integration.sh  androidx.sh  androidx_compose_multiplatform.sh  androidx_device_tests.sh  androidx_g3_tests.sh  androidx_host_tests.sh  androidx_host_tests_docker_2004.sh  androidx_host_tests_max_dep_versions.sh  androidx_incremental.sh  androidx_max_dep_versions.sh  androidx_multiplatform.sh  androidx_multiplatform_host_tests_mac.sh  androidx_multiplatform_linux.sh  androidx_multiplatform_mac.sh  androidx_multiplatform_mac_arm64.sh  androidx_multiplatform_mac_host_tests.sh  androidx_multiplatform_mac_host_tests_arm64.sh  androidx_sandbox.sh  androidx_snapshot.sh  androidx_test_changed_apks.sh  androidx_test_dependent_apks.sh  androidx_with_metalava.sh  build.py  build.sh  constants_and_utils.py  doAllTheBuild.py  merge_outputs.py
camera/: .gitignore  OWNERS  README.md  build.gradle  buildSrc  gradle.properties  gradlew  settings.gradle
car/: Android.mk  AndroidManifest.xml  OWNERS  README.txt  build.gradle
car-app/: OWNERS
cardview/: OWNERS  build.gradle  build.gradle.kts
collection/: OWNERS  README.md  build.gradle  (+2 more)
datastore/datastore-core/src/androidMain/cpp/: CMakeLists.txt  shared_counter.cc  shared_counter.h
datastore/datastore-core/src/androidMain/cpp/jni/: androidx_datastore_core_SharedCounter.cc
development/project-creator/native-template/groupId/artifactId/src/main/cpp/: CMakeLists.txt
development/project-creator/native-template/groupId/artifactId/src/main/cpp/version_scripts/: libname.map.txt
graphics/graphics-core/src/main/cpp/: CMakeLists.txt  buffer_transform_hint_resolver.cpp  buffer_transform_hint_resolver.h  egl_utils.cpp  graphics-core.cpp  jni.lds  sc_test_utils.cpp  sync_fence.cpp
graphics/graphics-path/src/main/cpp/: CMakeLists.txt  Conic.cpp  Conic.h  Path.h  PathIterator.cpp  PathIterator.h  libandroidx.graphics.path.map  pathway.cpp  scalar.h
graphics/graphics-path/src/main/cpp/math/: TVecHelpers.h  compiler.h  vec2.h
inspection/inspection/src/main/native/: CMakeLists.txt
inspection/inspection/src/main/native/inspection/: array_params_entry_hook.cc  array_params_entry_hook.h  art_tooling_impl.cc  art_tooling_impl.h  art_tooling_java_jni.cc  art_tooling_transform.h
inspection/inspection/src/main/native/jvmti/: hidden_api_silencer.cc  hidden_api_silencer.h  jvmti_helper.cc  jvmti_helper.h  scoped_local_ref.h
inspection/inspection/src/main/native/util/: jni_wrappers.h  logger.h  properties.cc  properties.h
pdf/pdf-viewer/src/main/native/: CMakeLists.txt  bitmap_parcel.cc  bitmap_parcel.h  extractors.cc  extractors.h  logging.h
test/integration-tests/junit-gtest-test/src/main/cpp/: CMakeLists.txt  gtest_wrapper_test.cpp
test/junit/junit-gtest/src/main/cpp/: CMakeLists.txt  gtest_wrapper.cpp
test/junit/junit-gtest/src/main/cpp/nativehelper/: ScopedLocalRef.h
tracing/tracing-perfetto-binary/src/main/cpp/: CMakeLists.txt  trace_categories.cc  trace_categories.h  tracing_perfetto.cc  tracing_perfetto.h
tracing/tracing-perfetto-binary/src/main/cpp/jni/: androidx_tracing_perfetto_jni_PerfettoNative.cc
tracing/tracing-perfetto-binary/src/main/cpp/perfetto/: README.md  perfetto.cc
(+73226 files in other folders)
